# bitonic-sequence-generator

./: .gitignore  Api.hs  BitonicSequence.hs  BitonicSequenceTest.hs  BitonicService.hs  DEV-README.md  HASKELL-CHEATSHEET.md  SCRIPT.md  bitonic-api.cabal  bitonic-sequence-generator.cabal  bitonic_sequence_generator.hs  docker-compose.yml  readme.md
.github/workflows/: haddock.yml
app/src/: Api.hs  ApiError.hs  AppContext.hs  BitonicController.hs  BitonicModels.hs  BitonicRepository.hs  BitonicSequence.hs  BitonicService.hs  Main.hs
app/test/: ApiIntegrationTest.hs  BitonicRepositoryTest.hs  BitonicSequenceTest.hs  BitonicServiceTest.hs
haddocks/: doc-index.html  doc-index.json  index.html
haddocks/base/: Foreign-C-Types.html  System-Posix-Types.html  base.txt  doc-index.json
haddocks/base/src/: GHC.Event.EPoll.html  System.Info.html
haddocks/binary/src/: Data.Binary.Class.html  Data.Binary.Generic.html  Data.Binary.Get.Internal.html  Data.Binary.Get.html  Data.Binary.Put.html  Data.Binary.html
haddocks/bitonic-api-0.1.0.0-inplace/: ApiError.html  BitonicModels.html  BitonicRepository.html  BitonicSequence.html  BitonicService.html  bitonic-api.haddock  doc-index.html  doc-index.json  index.html
haddocks/bitonic-api-0.1.0.0-inplace/src/: ApiError.html  BitonicModels.html  BitonicRepository.html  BitonicSequence.html  BitonicService.html
haddocks/bytestring/src/: Data.ByteString.Builder.ASCII.html  Data.ByteString.Builder.Extra.html  Data.ByteString.Builder.Internal.html  Data.ByteString.Builder.Prim.ASCII.html  Data.ByteString.Builder.Prim.Internal.Base16.html  Data.ByteString.Builder.Prim.Internal.Floating.html  Data.ByteString.Builder.Prim.Internal.html  Data.ByteString.Builder.Prim.html  Data.ByteString.Builder.RealFloat.D2S.html  Data.ByteString.Builder.RealFloat.F2S.html  Data.ByteString.Builder.RealFloat.Internal.html  Data.ByteString.Builder.RealFloat.TableGenerator.html  Data.ByteString.Builder.RealFloat.html  Data.ByteString.Builder.html  Data.ByteString.Char8.html  Data.ByteString.Internal.Type.html  Data.ByteString.Lazy.Char8.html  Data.ByteString.Lazy.Internal.Deque.html  Data.ByteString.Lazy.Internal.html  Data.ByteString.Lazy.html  Data.ByteString.Short.Internal.html  Data.ByteString.Unsafe.html  Data.ByteString.html
haddocks/directory/src/: System.Directory.Internal.C_utimensat.html  System.Directory.Internal.Common.html  System.Directory.Internal.Posix.html  System.Directory.OsPath.html  System.Directory.html
haddocks/filepath/src/: System.OsPath.Data.ByteString.Short.Hidden.html  System.OsPath.Data.ByteString.Short.Internal.Hidden.html  System.OsPath.Data.ByteString.Short.Word16.Hidden.html  System.OsPath.Encoding.Internal.Hidden.html  System.OsPath.Internal.html  System.OsPath.Posix.html  System.OsPath.Windows.html  System.OsString.Internal.Hidden.html  System.OsString.Internal.Types.Hidden.html
haddocks/parsec/src/: Text.Parsec.ByteString.Lazy.html  Text.Parsec.ByteString.html  Text.Parsec.Char.html  Text.Parsec.Combinator.html  Text.Parsec.Error.html  Text.Parsec.Expr.html  Text.Parsec.Language.html  Text.Parsec.Perm.html  Text.Parsec.Pos.html  Text.Parsec.Prim.html  Text.Parsec.String.html  Text.Parsec.Text.Lazy.html  Text.Parsec.Text.html  Text.Parsec.Token.html  Text.ParserCombinators.Parsec.Char.html  Text.ParserCombinators.Parsec.Expr.html  Text.ParserCombinators.Parsec.Prim.html
haddocks/process/src/: System.Process.Common.html  System.Process.Internals.html  System.Process.Posix.html  System.Process.html
haddocks/text/src/: Data.Text.Array.html  Data.Text.Encoding.Error.html  Data.Text.Encoding.html  Data.Text.Foreign.html  Data.Text.IO.html  Data.Text.Internal.Builder.Functions.html  Data.Text.Internal.Builder.RealFloat.Functions.html  Data.Text.Internal.Builder.html  Data.Text.Internal.ByteStringCompat.html  Data.Text.Internal.Encoding.Fusion.Common.html  Data.Text.Internal.Encoding.Fusion.html  Data.Text.Internal.Encoding.Utf16.html  Data.Text.Internal.Encoding.Utf32.html  Data.Text.Internal.Encoding.Utf8.html  Data.Text.Internal.Encoding.html  Data.Text.Internal.Fusion.CaseMapping.html  Data.Text.Internal.Fusion.Common.html  Data.Text.Internal.Fusion.Size.html  Data.Text.Internal.Fusion.Types.html  Data.Text.Internal.Fusion.html  Data.Text.Internal.IO.html  Data.Text.Internal.Lazy.Encoding.Fusion.html  Data.Text.Internal.Lazy.Fusion.html  Data.Text.Internal.Lazy.Search.html  Data.Text.Internal.Lazy.html  Data.Text.Internal.Private.html  Data.Text.Internal.Read.html  Data.Text.Internal.Search.html  Data.Text.Internal.StrictBuilder.html  Data.Text.Internal.Unsafe.Char.html  Data.Text.Internal.Unsafe.html  Data.Text.Internal.html  Data.Text.Lazy.Builder.Int.html  Data.Text.Lazy.Builder.RealFloat.html  Data.Text.Lazy.Encoding.html  Data.Text.Lazy.IO.html  Data.Text.Lazy.Read.html  Data.Text.Lazy.html  Data.Text.Read.html  Data.Text.Show.html  (+2 more)
haddocks/unix/: System-Posix-Files-ByteString.html  System-Posix-Files-PosixString.html  System-Posix-Files.html  unix.txt
haddocks/unix/src/: System.Posix.ByteString.FilePath.html  System.Posix.Directory.ByteString.html  System.Posix.Directory.PosixPath.html  System.Posix.Env.html  (+41 more)
k6/: README.md  cached-load-test.js  mixed-cache-load-test.js  no-cache-load-test.js
