cabal-version:      2.4
name:               bitonic-api
version:            0.1.0.0
synopsis:           Generate bitonic sequences from a given range
description:        A library to generate bitonic sequences of length N 
                    from integers in a given range [l, r]
license:            MIT
build-type:         Simple

common shared-properties
    default-language: Haskell2010
    build-depends:    base ^>=4.18,
                      aeson

library
    import:           shared-properties
    exposed-modules:  BitonicSequence, BitonicModels, BitonicService, BitonicRepository
    hs-source-dirs:   app/src
    build-depends:    hedis >=0.15,
                      bytestring,
                      text

executable bitonic-api
    import:           shared-properties
    hs-source-dirs:   app
    main-is:          src/Api.hs
    build-depends:    bitonic-api,
                      scotty >=0.12,
                      text,
                      hedis >=0.15,
                      bytestring,
                      http-types


test-suite bitonic-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   app/test
    main-is:          BitonicSequenceTest.hs
    build-depends:    HUnit >=1.6,
                      bitonic-api
